--- a/local.yml
+++ b/local.yml
@@ -2,15 +2,6 @@
 - hosts: localhost
   become: true
   tasks:
-  - name: Install Apache
+  - name: Install htop
     ansible.builtin.apt:
-      name: apache2
-  - name: Start the apache2 services
-    ansible.builtin.service:
-      name: apache2
-      state: started
-      enabled: true
-  - name: Copy index.html
-    ansible.builtin.copy:
-      src: index.html
-      dest: /var/www/html/index.html
+      name: htop
