added additional packages to local.yml

--- a/local.yml
+++ b/local.yml
@@ -2,6 +2,9 @@
 - hosts: localhost
   become: true
   tasks:
-  - name: Install htop
+  - name: Install packages
     ansible.builtin.apt:
-      name: htop
+      name:
+        - htop
+        - mc
+        - tmux
