--- a/local.yml
+++ b/local.yml
@@ -1,10 +1,11 @@
 ---
 - hosts: localhost
   become: true
+  pre_tasks:
+    - name: update repositories
+      ansible.builtin.apt:
+        update_cache: yes
+      changed_when: False
+
   tasks:
-  - name: Install packages
-    ansible.builtin.apt:
-      name:
-        - htop
-        - mc
-        - tmux
+    - include: tasks/packages.yml
